--- a/client/src/Components/MakerSpace/Project.css
+++ b/client/src/Components/MakerSpace/Project.css
@@ -14,9 +14,28 @@
 }
 .Project_card_content{
   padding: 0.75rem;
+  position: relative;
+}
+
+.Project_card_content:before{
+  content: ' ';
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.6;
+  background-image: url('../../Assets/images/Hogwart.png');
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+  background-size: contain;
 }
 .Projects__card p{
   max-width: 25rem;
+}
+.Project_text_content{
+  position: relative;
 }
 .Project_text_content h2{
   font-family: frozen;
