--- a/client/src/HomePage.css
+++ b/client/src/HomePage.css
@@ -64,7 +64,7 @@
   --slate: #8892b0;
   --navy: #0a192f;
   --input-bg: hsl(235, 44%, 80%);
-  --faq-q: #e3c58a;
+  --faq-q: #d8b265;
   --faq-a: #e8cf9e;
   /* font size  */
   --fz-xs: 13px;
@@ -126,6 +126,10 @@ a:hover {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
+.App {
+  width: fit-content;
+}
+ 
 .overlay {
   /* background-color: purple; */
   height: 100%;
