--- a/client/src/Components/MakerSpace/Memories.css
+++ b/client/src/Components/MakerSpace/Memories.css
@@ -94,7 +94,7 @@
    }
    .slide{
          width: 100vw;
-         height: 100%;
+         max-height: 80vw;
          object-fit: contain;
          /* padding-left: 1rem;
          padding-right: 1rem; */
