--- a/client/src/Components/MakerSpace/Project.css
+++ b/client/src/Components/MakerSpace/Project.css
@@ -2,7 +2,7 @@
   /* min-height: 70vh; */
   max-width: 25vw;
   /* height: fit-content; */
-  background: rgba(255, 255, 255, 0.10);
+  background: rgba(5, 1, 70,0.25);
   border-radius: 10px;
   box-shadow: 0 5px 4px rgba(0, 0, 0, 0.5);
 }
@@ -63,12 +63,15 @@
 }
 @media screen and (max-width: 968px) {
    .Projects__card{
-      max-width: 40vw;
+      max-width: 60vw;
    }
+   .Project_card_content:before{
+    top: 0;
+  }
 }
 @media (max-width: 768px){
    .Projects__card{
-       max-width: 75vw;
+       max-width: 90vw;
    }
 }
 
@@ -80,5 +83,9 @@
 @media screen and (max-width: 412px) {
   .Project_card_content:before{
      top: 30%;
+  }
+  .Projects__card{
+     padding: 0;
+     margin: 0;
   }
 }
