--- a/client/src/Components/Team/Team.css
+++ b/client/src/Components/Team/Team.css
@@ -218,8 +218,8 @@
 
 .dark-overlay {
   /* position: absolute; */
-  /* top: 0;
-    left: 0; */
+  top: 0;
+  left: 0;
   /* width: 100%;
     height: 100%; */
   height: 100%;
@@ -229,6 +229,12 @@
   transition: background-color 0.5s ease;
   z-index: -5;
   /* backdrop-filter: blur(1px); */
+}
+
+@media only screen and (max-width: 930px) {
+  .web-team {
+    margin-top: -20px;
+  }
 }
 
 @media only screen and (max-width: 600px) {
@@ -257,6 +263,9 @@
     justify-content: center;
     align-items: center;
   }
+  .web-team {
+    width: 350px;
+  }
 }
 
 @media screen and (max-width: 320px) {
@@ -267,7 +276,7 @@
 
 .web-team {
   position: fixed;
-  /* top: -10rem; */
+
   /* width: 100vw; */
   right: -2rem;
   opacity: 0.6;
