--- a/client/src/Components/Team/Team.css
+++ b/client/src/Components/Team/Team.css
@@ -222,12 +222,13 @@
     left: 0; */
   /* width: 100%;
     height: 100%; */
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   position: fixed;
   background-color: rgba(0, 0, 0, 0.5);
   transition: background-color 0.5s ease;
   z-index: -5;
+  transform: translateY(-18px);
   /* backdrop-filter: blur(1px); */
 }
 
@@ -267,7 +268,7 @@
 
 .web-team {
   position: fixed;
-  /* top: -10rem; */
+  top: 4rem;
   /* width: 100vw; */
   right: -2rem;
   opacity: 0.6;
