--- a/client/src/HomePage.css
+++ b/client/src/HomePage.css
@@ -7,9 +7,10 @@
   scroll-behavior: smooth;
   transition: scroll-behavior 10s ease-in-out;
   letter-spacing: 0.8px;
+  cursor: none;
 }
 
-a:hover {
+/* a:hover {
   cursor: url("./Components/cursor/pointer-yellow.png"), auto;
 }
 button:hover {
@@ -22,7 +23,7 @@ body {
 textarea:hover,
 input:hover {
   cursor: url("./Components/cursor/ibeam_small.png"), text;
-}
+} */
 @font-face {
   font-family: "frozen";
   src: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/209981/Ice%20kingdom%20-%20Bold%20-%20Por%20Kustren.woff");
@@ -107,7 +108,7 @@ body {
   width: 100%;
   height: 100%;
   /* cursor: url("./Components/cursor/cursor-yellow.png"), auto; */
-  cursor: url("./Components/cursor/cursor-yellow.png"), auto;
+  /* cursor: url("./Components/cursor/cursor-yellow.png"), auto; */
 }
 
 ::-webkit-scrollbar {
@@ -134,7 +135,7 @@ body {
 .App {
   width: fit-content;
 }
- 
+
 .overlay {
   /* background-color: purple; */
   height: 100%;
