--- a/client/src/Components/Team/Team.css
+++ b/client/src/Components/Team/Team.css
@@ -36,7 +36,7 @@
   width: 10rem;
   height: 3px;
   border-radius: 1rem;
-  margin-left: 0.5rem;
+  margin-left: 0.8rem;
 }
 
 .teamHeading > h1::before {
@@ -47,7 +47,7 @@
   width: 10rem;
   height: 3px;
   border-radius: 1rem;
-  margin-right: 0.5rem;
+  margin-right: 0.8rem;
 }
 
 /* card css  */
@@ -240,14 +240,14 @@
 
 @media only screen and (max-width: 600px) {
   .teamHeading > h1::before {
-    
+    width: 4.5rem !important;
   }
   .teamHeading > h1 {
     text-align: center;
     font-size: 3.6rem;
   }
   .teamHeading > h1::after {
-    
+    width: 4.5rem !important;
   }
 
   .Teams {
