Heading resposiveness fixed

--- a/client/src/Components/Timeline/timeline.css
+++ b/client/src/Components/Timeline/timeline.css
@@ -96,6 +96,21 @@
     margin: 0 1rem;
   }
   .eventsheading > h1 {
-    font-size: 26px;
+    font-size: 4em;
+  }
+}
+@media (max-width: 600px) {
+  .eventsheading > h1 {
+    font-size: 3.6em;
+  }
+
+  .eventsheading > h1::after {
+    width: 4.5rem;
+    margin-left: 0.8rem;
+  }
+  
+  .eventsheading > h1::before {
+    width: 4.5rem;
+    margin-right: 0.8rem;
   }
 }
