--- a/client/src/Components/Faq/Accordian.css
+++ b/client/src/Components/Faq/Accordian.css
@@ -106,7 +106,8 @@
 }
 
 .answer-content:hover {
-  color: rgb(226, 226, 226);
+  /* color: rgb(226, 226, 226); */
+  color: rgb(205, 190, 219);
 }
 
 .question-content:hover {
