--- a/client/src/Components/Footer/Footer.css
+++ b/client/src/Components/Footer/Footer.css
@@ -161,6 +161,11 @@
 .footer > .lower-section > h1 > span {
   color: rgb(255, 174, 81);
   text-decoration: underline;
+  transition: color 0.3s; /* Optional: Add a smooth transition for a more polished effect */
+}
+/*changes*/
+.footer > .lower-section > h1 > span:hover {
+  color:blueviolet;
 }
 
 /* media queries */
