--- a/client/src/Components/Footer/Footer.css
+++ b/client/src/Components/Footer/Footer.css
@@ -163,6 +163,10 @@
   text-decoration: underline;
 }
 
+.tech_team_footer {
+  color: var(--harry);
+}
+
 /* media queries */
 @media screen and (max-width: 704px) {
   .footer {
