footer section updated, about us section updated

--- a/client/src/Components/Footer/Footer.css
+++ b/client/src/Components/Footer/Footer.css
@@ -160,8 +160,9 @@
 
 .footer > .lower-section > h1 > span {
   color: rgb(255, 174, 81);
+  /*changes*/
   text-decoration: underline;
-  transition: color 0.3s; /* Optional: Add a smooth transition for a more polished effect */
+  transition: color 0.3s; /* Add a smooth transition for a more polished effect */
 }
 /*changes*/
 .footer > .lower-section > h1 > span:hover {
