--- a/client/src/Components/LandingPage/Landing.css
+++ b/client/src/Components/LandingPage/Landing.css
@@ -35,11 +35,15 @@
   margin-left: 80px;
 }
 
+.social-link-icon {
+  font-size: 28px;
+}
+
 .social-link a :hover {
   scale: 1.05;
   color: var(--harry);
   transition: all 0.5s;
-  filter: drop-shadow(0 0 4px #d19f3d);
+  /* filter: drop-shadow(0 0 4px #d19f3d); */
 }
 
 /* @media (max-width: 1205) {
@@ -68,7 +72,7 @@
     align-items: center;
   }
   .social-link {
-    margin-top: 1rem;
+    /* margin-top: 1rem; */
     align-items: center;
     margin-left: 0;
     /* flex-direction: column; */
@@ -76,6 +80,9 @@
     width: 100%;
     gap: 20px;
     scale: 0.7;
+  }
+  .social-link-icon {
+    font-size: 44px;
   }
 }
 
