--- a/client/src/HomePage.css
+++ b/client/src/HomePage.css
@@ -144,72 +144,57 @@ body {
 }
 
 .dark-overlay {
-  /* position: absolute; */
-  /* top: 0;
-    left: 0; */
-  /* width: 100%;
-    height: 100%; */
   height: 100%;
   width: 100%;
   position: fixed;
   background-color: rgba(0, 0, 0, 0.5);
   transition: background-color 0.5s ease;
   z-index: -5;
-  /* backdrop-filter: blur(1px); */
 }
 
 .dark-overlay.active {
   background-color: rgba(0, 0, 0, 0.5);
 }
 
-/* LandingPage.css */
-
-.progress-bar {
+.progress-bar-container {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  height: 3px; /* Adjust the height as needed */
+  height: 5px;
+  background-color: #3498db;
+  z-index: 1000;
+}
+
+.progress-bar {
+  height: 100%;
+  background-color: #2c3e50;
+  transition: width 0.3s ease;
+}
+
+/*.progress-bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 3px; /*\ Adjust the height as needed
   background-color: transparent;
   z-index: 999;
 }
 
 .progress {
   height: 100%;
-  background-color: var(--green); /* Line color */
-  transform-origin: left; /* Set the transform origin to the left */
-  transform: scaleX(0); /* Initially, the progress bar is not visible */
-  animation: expandProgress 0.3s linear forwards; /* Use an animation to expand progress */
-  transition: transform 0.3s; /* Apply a smooth transition on transform */
+  background-color: var(--green); 
+  transform-origin: left; 
+  transform: scaleX(0); 
+  animation: expandProgress 0.3s linear forwards; 
+  transition: transform 0.3s; 
 }
 
 @keyframes expandProgress {
   to {
-    transform: scaleX(1); /* Expand the progress bar to full width */
+    transform: scaleX(1);
   }
-}
-
-/* .background-image {
-  position: fixed;
-  top: 0;
-  right: 0;
-  width: 100%; */
-/* Adjustthewidthasneededheight: 100%; */
-/* background: url('./imgs/moon1.png') no-repeat center center fixed; */
-/* background-size: 90%;
-  transform: translate(40vh, -5vh); */
-/*Translatetheimage*/
-/* -webkit-transform: translate(40vh, -5vh);
-  -moz-transform: translate(40vh, -5vh);
-  -ms-transform: translate(40vh, -5vh);
-  -o-transform: translate(40vh, -5vh);
-} */
-
-/* 
-.app {
-  position: relative;
-  width: 100vw;
-  height: 100vh;
 } */
 
 .snowfall {
