--- a/client/src/Components/MakerSpace/Makerspace.css
+++ b/client/src/Components/MakerSpace/Makerspace.css
@@ -24,9 +24,9 @@
   width: 5.5rem;
   margin: 0 auto;
 }
-/* .maker__projects{
-      margin: 0 auto;
-  } */
+.maker__projects{
+   max-width: 95vw;
+}
 .maker_project {
   display: flex;
   gap: 2rem;
