--- a/client/src/Components/MakerSpace/Memories.css
+++ b/client/src/Components/MakerSpace/Memories.css
@@ -76,9 +76,6 @@
  }
  
  @media screen and (max-width: 768px) {
-   /* .memories__container{
-      max-width: 70vw;
-   } */
    .slide{
          width: 100%;
      }
@@ -96,12 +93,17 @@
          width: 100vw;
          max-height: 80vw;
          object-fit: contain;
-         /* padding-left: 1rem;
-         padding-right: 1rem; */
          box-shadow: none;
    }
    .btn{
-      display: none;
+      height: 2rem;
+      width: 2rem;
+   }
+   .btn-left{
+      left: -14px;
+   }
+   .btn-right{
+       right: 20px;
    }
    .indicator{
        display: none;
