--- a/client/src/Components/Team/Team.css
+++ b/client/src/Components/Team/Team.css
@@ -1,7 +1,6 @@
 /* Team css  */
 @import url("https://fonts.googleapis.com/css2?family=Alumni+Sans+Collegiate+One&family=Nosifer&display=swap");
 #team {
-
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -12,6 +11,10 @@
   justify-content: center;
   /* align-items: center;  */
   flex-wrap: wrap;
+}
+
+.ocHeading {
+  margin-top: 6rem;
 }
 
 .teamHeading > h1 {
@@ -225,8 +228,6 @@
   /* position: absolute; */
   top: 0;
   left: 0;
-  /* width: 100%;
-    height: 100%; */
   height: 100vh;
   width: 100vw;
   position: fixed;
