--- a/client/src/Components/MakerSpace/Project.css
+++ b/client/src/Components/MakerSpace/Project.css
@@ -45,7 +45,7 @@
   margin-bottom: 0.75rem;
 }
 .Project_text_content p{
-  font-family: frozen;
+  font-family: poppins;
   color: #fff;
 }
 .project__icons{
