--- a/client/src/Components/ContactUs/Contact.css
+++ b/client/src/Components/ContactUs/Contact.css
@@ -9,7 +9,6 @@
 .contact {
   width: 80%;
   height: fit-content;
-  /* padding: 5rem 15rem; */
   font-family: var(--font-poppins);
   color: var(--slate);
   z-index: 3;
@@ -25,7 +24,7 @@
   justify-content: center;
   text-align: center;
   font-size: 4rem;
-  margin-top: 0rem;
+  margin-top: -3rem;
 }
 .contactHeading > h1::after {
   content: "";
@@ -49,7 +48,6 @@
 
 .contact_content {
   display: flex;
-
   align-items: center;
   padding-bottom: 5rem;
   flex-wrap: wrap;
@@ -57,18 +55,16 @@
 }
 
 .contact_content_texts {
-  /* padding: 2rem 1rem; */
   width: 50%;
   margin-right: 1rem;
   margin-left: 1rem;
   text-align: center;
   max-width: 300px;
   height: 100%;
-
   min-width: 250px;
-  backdrop-filter: blur(10px); /* Apply a blur effect */
-  border-radius: 10px; /* Rounded corners for the glass container */
-  padding: 2rem; /* Adjust padding to your liking */
+  backdrop-filter: blur(10px); 
+  border-radius: 10px;
+  padding: 2rem; 
   background-color: rgb(17, 34, 64, 0.57);
 }
 
@@ -100,7 +96,7 @@
     255,
     255,
     0.2
-  ); /* Adjust the opacity for the glass effect */
+  ); 
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
   border-bottom: 1px solid var(--green);
@@ -114,15 +110,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  backdrop-filter: blur(10px); /* Apply a blur to create glassmorphism effect */
+  backdrop-filter: blur(10px);
   background: rgba(
     255,
     255,
     255,
     0.2
-  ); /* Adjust the opacity for the glass effect */
-  border: 2px solid rgba(255, 255, 255, 0.2); /* Slightly thicker border */
-  border-radius: 10px; /* Add border radius for rounded corners */
+  ); 
+  border: 2px solid rgba(255, 255, 255, 0.2); 
+  border-radius: 10px;
 }
 
 input {
@@ -133,7 +129,6 @@ input {
   border: none;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
-
   color: var(--slate);
   transition: border, background-color 0.7s;
   border-bottom: 1px solid var(--green);
@@ -151,7 +146,7 @@ textarea {
   border: none;
   background-color: rgb(17, 34, 64, 0.57);
   color: var(--light-navy);
-  border-radius: 10px; /* Add border radius for rounded corners */
+  border-radius: 10px;
   padding: 0.5rem 1rem;
   font-family: var(--font-poppins);
   border-bottom: 1px solid var(--green);
@@ -191,8 +186,6 @@ textarea:focus {
   color: var(--harry-dark);
 }
 
-
-
 @media screen and (max-width: 600px) {
   .contactHeading > h1 {
     font-size: 3.2rem;
@@ -213,77 +206,3 @@ textarea:focus {
     width: 6rem;
   }
 }
-
-/* 
-@media screen and (max-width: 940px) {
-    .contact_content{
-        flex-direction: column;
-    }
-    .contact{
-        height: fit-content;
-    }
-    .contact_content_texts{
-        width: 100%;
-        margin: 0;
-        padding: 0;
-    }
-    .input_element{
-        margin-top: 2rem;
-        padding: 0;
-    }
-    
-    .contact_btn{
-        padding: 1rem;
-    }
-} */
-
-/* @media screen and (max-width: 600px) {
-    .contact_btn{
-        width: 40%;
-        padding: 0.5rem;
-    }
-}
-@media screen and (max-width: 335px) {
-    .contact_btn{
-        margin: auto auto;
-        width: 80%;
-        padding: 0.5rem;
-    }
-}
-@media screen and (max-width: 280px) {
-    .contact_heading::after{
-        display: none;
-    }
-} */
-
-/* media query for padding  */
-
-/* @media screen and (max-width: 1500px) {
-    .contact{
-        padding: 5rem 15rem;
-    }
-}
-@media screen and (max-width: 1148px) {
-    .contact{
-        padding: 5rem 10rem;
-    }
-}
-@media screen and (max-width: 900px) {
-
-    .contact{
-        padding: 5rem 5rem;
-        height: fit-content
-    }
-    
-    
-} */
-
-/* @media screen and (max-width: 525px) {
-   
-    .contact{
-        padding: 5rem 1rem;
-        
-    }
-    
-}
- */
