--- a/client/src/Components/recruitmentform/style.css
+++ b/client/src/Components/recruitmentform/style.css
@@ -22,6 +22,30 @@
     --smaller-font-size: 0.813rem;
   }
 }
+.back_to_home {
+  margin-top: 2rem;
+  padding: 20px;
+  border-radius: 10px;
+  margin-left: 2rem;
+  position: fixed;
+  background-color: #bd1a89;
+  z-index: 10;
+  font-size: 28px;
+}
+
+.dark_layer {
+  background-color: #00000071;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.container_form {
+  margin-top: 3rem;
+}
 
 .login__content,
 .frmSubmit,
@@ -34,7 +58,7 @@
 
 .login__content {
   position: relative;
-  height: 100vh;
+  height: 120vh;
   align-items: center;
 }
 
@@ -46,7 +70,9 @@
   object-position: center;
 }
 .login__content img {
-  height: 7vw;
+  height: 7rem;
+  background-color: #fff;
+  border-radius: 50%;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
@@ -63,7 +89,7 @@
 
 .login__title {
   color: var(--title-color);
-  font-size: 7vw;
+  font-size: 5rem;
   margin-bottom: 0.5rem;
 }
 
@@ -72,7 +98,7 @@
 }
 
 .login__description {
-  font-size: 3vw;
+  font-size: 2rem;
   color: whitesmoke;
 }
 
@@ -125,49 +151,6 @@
   padding-right: 36px;
 }
 
-.login__eye {
-  width: max-content;
-  height: max-content;
-  position: absolute;
-  right: 0.75rem;
-  top: 0;
-  bottom: 0;
-  margin: auto 0;
-  font-size: 1.25rem;
-  cursor: pointer;
-}
-
-.login__check {
-  display: flex;
-  column-gap: 0.5rem;
-  align-items: center;
-}
-
-.login__check-input {
-  appearance: none;
-  width: 16px;
-  height: 16px;
-  border: 2px solid var(--text-color);
-  background-color: rgba(255, 255, 255, 0.1);
-  border-radius: 0.25rem;
-}
-
-.login__check-input:checked {
-  background: var(--first-color);
-}
-
-.login__check-input:checked::before {
-  content: "✔";
-  display: block;
-  color: #fff;
-  font-size: 0.75rem;
-  transform: translate(1.5px, -2.5px);
-}
-
-.login__check-label {
-  font-size: var(--small-font-size);
-}
-
 .login__buttons {
   display: flex;
   column-gap: 0.75rem;
@@ -193,13 +176,6 @@
   box-shadow: none;
 }
 
-.login__forgot {
-  font-size: var(--smaller-font-size);
-  font-weight: var(--font-semi-bold);
-  color: var(--first-color);
-  text-decoration: none;
-}
-
 @media screen and (max-width: 360px) {
   .login__buttons {
     flex-direction: column;
@@ -208,25 +184,23 @@
 
 @media screen and (min-width: 576px) {
   .frmSubmit {
-    width: 450px;
     justify-self: center;
   }
 }
 
 @media screen and (min-width: 1064px) {
   .container_form {
-    height: 100vh;
+    /* height: 100vh; */
     display: grid;
     place-items: center;
   }
 
   .login__content {
-    width: 1024px;
+    width: 70%;
     height: 600px;
   }
   .login__img {
-    border-radius: 3.5rem;
-    box-shadow: 0 24px 48px #024361;
+    background-color: #fff;
   }
   .frmSubmit {
     justify-self: flex-end;
@@ -267,5 +241,30 @@
   }
   .login__button-ghost {
     border: 2.5px solid var(--first-color);
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .login__title {
+    font-size: 4rem;
+  }
+  .login__description {
+    font-size: 1.75rem;
+  }
+}
+@media screen and (max-width: 600px) {
+  .login__title {
+    font-size: 3rem;
+  }
+  .login__description {
+    font-size: 1.25rem;
+  }
+}
+@media screen and (max-width: 450px) {
+  .login__title {
+    font-size: 2rem;
+  }
+  .login__description {
+    font-size: 1rem;
   }
 }
