--- a/client/src/Components/ContactUs/Contact.css
+++ b/client/src/Components/ContactUs/Contact.css
@@ -187,24 +187,24 @@ textarea:focus {
 
 @media screen and (max-width: 600px) {
   .contactHeading > h1 {
-    font-size: 3.2rem;
+    font-size: 3.7rem;
   }
   .contactHeading > h1::after {
-    width: 4.5rem;
+    width: 0;
   }
   .contactHeading > h1::before {
-    width: 4.5rem;
+    width: 0;
   }
   .contact_btn {
     width: fit-content;
   }
 }
 
-@media screen and (max-width: 724px) {
+/* @media screen and (max-width: 724px) {
   .contactHeading > h1::after {
     width: 6rem;
   }
   .contactHeading > h1::before {
     width: 6rem;
   }
-}
+} */
